<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/uuidTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="123-123-321-123" />

        <TextView
            android:id="@+id/chuckNorrisFactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="3"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Some random fact" />

        <Button
            android:id="@+id/changeUuidButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/change_uuid" />

        <Button
            android:id="@+id/changeChuckNorrisFactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_fact" />

        <Button
            android:id="@+id/changeBackgroundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_background" />

        <Button
            android:id="@+id/launchNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_next" />

        <Button
            android:id="@+id/launchPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_permission" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            tools:text="Number: #1" />

    </LinearLayout>

</ScrollView>
